--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -2,27 +2,27 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <!--    <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-    <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>FBreak | Registration</title>
-    <!--    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
-    <script src="/js/main.js" defer></script>
     <link rel="stylesheet" href="css/static.css">
+    <link rel="stylesheet" href="css/registration.css">
     <style>
-        #success_message{ display: none;}
+        #success_message {
+            display: none;
+        }
     </style>
+    <script th:src="@{js/registration_validation_form.js}"></script>
 </head>
 <body>
 <div class="main">
     <div class="container">
         <div class="row header">
             <div class="logo">
-                <img src="../images/logo.svg" alt="logo">
+                <a th:href="@{/}"><img src="../images/logo.svg" alt="logo"></a>
             </div>
             <div class="nav">
                 <ul>
@@ -33,142 +33,90 @@
         </div>
     </div>
 
-<!--    <div class="container container_content">-->
-<!--        <form class="registration-form">-->
-<!--            <-->
-<!--        </form>-->
-<!---->
-<!--    </div>-->
     <div class="container">
 
-        <form class="well form-horizontal" action=" " method="post"  id="contact_form">
+        <form class="well form-horizontal" th:action="@{/process_register}" method="post" id="contact_form"
+              name="reg_form" onsubmit="return validateForm()" autocomplete="off">
             <fieldset>
 
-                <!-- Form Name -->
-                <legend style="text-align: center;"><h2><b>Registration Form</b></h2></legend><br>
-
-                <!-- Text input-->
+                <legend style="text-align: center;"><h2><b>Registration Form</b></h2></legend>
+                <br>
 
                 <div class="form-group">
                     <label class="col-md-4 control-label">First Name</label>
                     <div class="col-md-4 inputGroupContainer">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input  name="first_name" placeholder="First Name" class="form-control"  type="text">
+                            <input name="first_name" placeholder="First Name" class="form-control input" type="text"
+                                   value="">
+
+
                         </div>
                     </div>
                 </div>
 
-                <!-- Text input-->
-
                 <div class="form-group">
-                    <label class="col-md-4 control-label" >Last Name</label>
+                    <label class="col-md-4 control-label">Last Name</label>
                     <div class="col-md-4 inputGroupContainer">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input name="last_name" placeholder="Last Name" class="form-control"  type="text">
+                            <input name="last_name" placeholder="Last Name" class="form-control input" type="text"
+                                   value="">
                         </div>
                     </div>
                 </div>
-
-                <div class="form-group">
-                    <label class="col-md-4 control-label">Department / Office</label>
-                    <div class="col-md-4 selectContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-list"></i></span>
-                            <select name="department" class="form-control selectpicker">
-                                <option value="">Select your Department/Office</option>
-                                <option>Department of Engineering</option>
-                                <option>Department of Agriculture</option>
-                                <option >Accounting Office</option>
-                                <option >Tresurer's Office</option>
-                                <option >MPDC</option>
-                                <option >MCTC</option>
-                                <option >MCR</option>
-                                <option >Mayor's Office</option>
-                                <option >Tourism Office</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Text input-->
 
                 <div class="form-group">
                     <label class="col-md-4 control-label">Username</label>
                     <div class="col-md-4 inputGroupContainer">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input  name="user_name" placeholder="Username" class="form-control"  type="text">
+                            <input name="user_name" placeholder="Username" class="form-control input" type="text"
+                                   required minlength="3" maxlength="20">
                         </div>
                     </div>
                 </div>
 
-                <!-- Text input-->
-
-                <div class="form-group">
-                    <label class="col-md-4 control-label" >Password</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input name="user_password" placeholder="Password" class="form-control"  type="password">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Text input-->
-
-                <div class="form-group">
-                    <label class="col-md-4 control-label" >Confirm Password</label>
-                    <div class="col-md-4 inputGroupContainer">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                            <input name="confirm_password" placeholder="Confirm Password" class="form-control"  type="password">
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Text input-->
                 <div class="form-group">
                     <label class="col-md-4 control-label">E-Mail</label>
                     <div class="col-md-4 inputGroupContainer">
                         <div class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-                            <input name="email" placeholder="E-Mail Address" class="form-control"  type="text">
+                            <input name="email" placeholder="E-Mail Address" class="form-control input" type="text"
+                                   id="email" required minlength="3" maxlength="20">
                         </div>
                     </div>
                 </div>
-
-
-                <!-- Text input-->
 
                 <div class="form-group">
-                    <label class="col-md-4 control-label">Contact No.</label>
+                    <label class="col-md-4 control-label">Password</label>
                     <div class="col-md-4 inputGroupContainer">
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-                            <input name="contact_no" placeholder="(639)" class="form-control" type="text">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                            <input name="user_password" placeholder="Password" class="form-control input"
+                                   type="password" required minlength="3" maxlength="20">
                         </div>
                     </div>
                 </div>
 
-                <!-- Select Basic -->
+                <div class="alert alert-success" role="alert" id="success_message">Success <i
+                        class="glyphicon glyphicon-thumbs-up"></i> Success!.
+                </div>
 
-                <!-- Success message -->
-                <div class="alert alert-success" role="alert" id="success_message">Success <i class="glyphicon glyphicon-thumbs-up"></i> Success!.</div>
-
-                <!-- Button -->
                 <div class="form-group">
                     <label class="col-md-4 control-label"></label>
                     <div class="col-md-4"><br>
-                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<button type="submit" class="btn btn-warning" >&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSUBMIT <span class="glyphicon glyphicon-send"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</button>
+                        &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                        <button type="submit" class="btn btn-warning">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSUBMIT
+                            <span class="glyphicon glyphicon-send"></span>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                        </button>
                     </div>
                 </div>
 
             </fieldset>
         </form>
     </div>
-</div><!-- /.container -->
+</div>
 
 </div>
 
