--- a/src/main/resources/static/css/static.css
+++ b/src/main/resources/static/css/static.css
@@ -6,9 +6,10 @@ body {
     font-family: 'Raleway', sans-serif;
     background-image: url("../images/bg.png");
     background-size: 100%;
+    background-attachment: fixed;
 }
 
-.button-head, .tag {
+.button-head{
     background-color: Transparent;
     background-repeat: no-repeat;
     color: #56f75f;
@@ -24,7 +25,7 @@ body {
     outline: none;
 }
 
-a {
+a, logged_user {
     color: rgba(255, 255, 255, 0.549);
     font-size: 20px;
     transition: all 0.5s ease;
