--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,80 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
 
-/*body {*/
-/*    background-color: #232323;*/
-/*    color: white;*/
-/*    font-family: 'Raleway', sans-serif;*/
-/*    background-image: url("../images/bg.png");*/
-/*    background-size: 100%;*/
-/*}*/
-
-/*.button-head, .tag {*/
-/*    background-color: Transparent;*/
-/*    background-repeat: no-repeat;*/
-/*    color: #56f75f;*/
-/*    border: none;*/
-/*    border-bottom: #56f75f solid 1px;*/
-/*    cursor: pointer;*/
-/*    overflow: hidden;*/
-/*    outline: none;*/
-/*    margin-right: 8px;*/
-/*}*/
-
-/*.button-head:focus {*/
-/*    outline: none;*/
-/*}*/
-
-/*a {*/
-/*    color: rgba(255, 255, 255, 0.549);*/
-/*    font-size: 20px;*/
-/*    transition: all 0.5s ease;*/
-/*}*/
-
-/*a:hover {*/
-/*    text-decoration: none;*/
-/*    color: white;*/
-/*    transition: all 0.5s ease;*/
-/*}*/
-
-/*li {*/
-/*    list-style-type: none;*/
-/*    margin-right: 20px;*/
-/*}*/
-
-/*ul {*/
-/*    display: flex;*/
-/*    height: auto;*/
-/*    margin-bottom: 0;*/
-/*    flex-direction: row;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-/*}*/
-
-/*.nav {*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*}*/
-
-/*.main {*/
-/*    min-width: 100vw;*/
-/*    min-height: 100vh;*/
-/*}*/
-
-/*.logo img {*/
-/*    width: 70%;*/
-/*    height: auto;*/
-/*}*/
-
-/*.header {*/
-/*    display: flex;*/
-/*    justify-content: space-between;*/
-/*}*/
-
-/* posts */
-/*.container_content {*/
-/*    margin-top: 5%;*/
-/*}*/
-
 .post_header {
     display: flex;
     justify-content: space-between;
@@ -140,4 +65,20 @@ h2 {
 }
 .name{
     color: darkmagenta;
+}
+.tags{
+    float: left;
+}
+.tags a{
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    color: #56f75f;
+    border: none;
+    border-bottom: #56f75f solid 1px;
+    cursor: pointer;
+    outline: none;
+    margin-right: 8px;
+}
+.image{
+    max-width: 100%;
 }
