--- a/src/main/resources/templates/reading.html
+++ b/src/main/resources/templates/reading.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>FBreak | Publish post</title>
+    <title  th:object="${post}" th:text="'FBreak | '+${post.fanfic_name}"></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
     </script>
-    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
+    <script src="/js/main.js" defer></script>
     <link rel="stylesheet" href="css/static.css">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
+
 <div class="main">
     <div class="container">
         <div class="row header">
@@ -20,6 +22,10 @@
                 <a th:href="@{/}"><img src="../images/logo.svg" alt="logo"></a>
             </div>
             <div class="nav">
+                <ul sec:authorize="isAnonymous()">
+                    <li><a th:href="@{/login}">LOG IN</a></li>
+                    <li><a th:href="@{/registration}">REGISTER</a></li>
+                </ul>
                 <ul sec:authorize="isAuthenticated()">
                     <li><span sec:authentication="name"></span></li>
                     <li><a th:href="@{/logout}">LOGOUT</a></li>
@@ -28,14 +34,18 @@
         </div>
     </div>
 
-    <div class="container container_content" th:object="${post}">
+    <div class="container container_content">
         <div class="content">
-            <div class="post">
-                <legend style="text-align: center;"><h2><b>Publish fanfic</b></h2></legend>
-                <div class="line"></div>
-                <button id="upload_widget" class="cloudinary-button">Upload files</button>
-                <script th:src="@{js/load_cloudinary_widget.js}"></script>
+
+          <div class="post">
+            <div>
+              <h2 class="name" th:text="${post.fanfic_name}"></h2>
             </div>
+            <div class="line"></div>
+            <div class="">
+              <h2 class="text" th:text="${post.fanfic_text}"></h2>
+            </div>
+          </div>
         </div>
     </div>
 </div>
